# sbilifeco-nl2sql

./: .gitignore  LICENSE  README.md  docker-compose.yml  req.txt
cp/base/http_client/: pyproject.toml
cp/base/http_client/src/sbilifeco/cp/common/http/: client.py
cp/base/http_client/test/: http_client_test.py
cp/base/http_service/: pyproject.toml
cp/base/http_service/src/sbilifeco/cp/common/http/: server.py
cp/base/http_service/test/: http_server_test.py
cp/base/kafka_client/: pyproject.toml
cp/base/kafka_client/src/sbilifeco/cp/common/kafka/: consumer.py  producer.py
cp/base/kafka_client/src/sbilifeco/cp/kafka/: consumer.py  producer.py
cp/base/kafka_client/test/: envvars.py  kafka_test.py
cp/base/mcp_client/: pyproject.toml
cp/base/mcp_client/src/sbilifeco/cp/common/mcp/: client.py
cp/base/mcp_client/test/: mcp_client_test.py
cp/base/mcp_service/: pyproject.toml
cp/base/mcp_service/src/sbilifeco/cp/common/mcp/: server.py
cp/base/mcp_service/test/: server_test.py
cp/http-servers/llm/: pyproject.toml
cp/http-servers/llm/src/sbilifeco/cp/llm/: http_server.py
cp/http-servers/metadata_storage/: pyproject.toml
cp/http-servers/metadata_storage/src/sbilifeco/cp/metadata_storage/: http_server.py
cp/http-servers/non-sql-answer-repo/: pyproject.toml
cp/http-servers/non-sql-answer-repo/src/sbilifeco/cp/non_sql_answer_repo/: http_server.py
cp/http-servers/non-sql-answer-repo/test/: http_test.py
cp/http-servers/object-read-update/: pyproject.toml
cp/http-servers/object-read-update/src/sbilifeco/cp/object_read_update/: http_server.py
cp/http-servers/population-counter/: pyproject.toml
cp/http-servers/population-counter/src/sbilifeco/cp/population_counter/: http_server.py
cp/http-servers/query-flow-answer-repo/: pyproject.toml
cp/http-servers/query-flow-answer-repo/src/sbilifeco/cp/query_flow_answer_repo/: http_server.py
cp/http-servers/query-flow-answer-repo/test/: http_test.py
cp/http-servers/query_flow/: pyproject.toml
cp/http-servers/query_flow/src/sbilifeco/cp/query_flow/: http_server.py
cp/http-servers/question-suggestion-flow/: pyproject.toml
cp/http-servers/question-suggestion-flow/src/sbilifeco/cp/question_suggestion_flow/: http_server.py
cp/http-servers/question-suggestion-flow/test/: http_test.py
cp/http-servers/session_data_manager/: pyproject.toml
cp/http-servers/session_data_manager/src/sbilifeco/cp/session_data_manager/: http_server.py
cp/http_clients/llm/: pyproject.toml
cp/http_clients/llm/src/sbilifeco/cp/llm/: http_client.py
cp/http_clients/llm/test/: llm_test.py
cp/http_clients/metadata_storage/: pyproject.toml
cp/http_clients/metadata_storage/src/sbilifeco/cp/metadata_storage/: http_client.py
cp/http_clients/metadata_storage/test/: client_with_synmetrix_test.py  envvars.py  http_client_test.py
cp/http_clients/non-sql-answer-repo/: pyproject.toml
cp/http_clients/non-sql-answer-repo/src/sbilifeco/cp/non_sql_answer_repo/: http_client.py
cp/http_clients/object-read-update/: pyproject.toml
cp/http_clients/object-read-update/src/sbilifeco/cp/object_read_update/: http_client.py
cp/http_clients/object-read-update/test/: http_test.py
cp/http_clients/population-counter/: pyproject.toml
cp/http_clients/population-counter/src/sbilifeco/cp/population_counter/: http_client.py
cp/http_clients/population-counter/test/: client_test.py
cp/http_clients/query-flow-answer-repo/: pyproject.toml
cp/http_clients/query-flow-answer-repo/src/sbilifeco/cp/query_flow_answer_repo/: http_client.py
cp/http_clients/query_flow/: pyproject.toml
frontend/config-file-editor/: Dockerfile  package-lock.json  package.json  rollup.config.mjs  start.sh  tsconfig.json
frontend/metadata-manager/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/query-generator-ui/: Dockerfile  index.html  package-lock.json  package.json  run.sh  vite.config.ts
frontend/question-generator-ui/: index.html  package-lock.json  package.json  tsconfig.json
gateways/alchemy/: pyproject.toml
gateways/alchemy/src/sbilifeco/gateways/: alchemy.py
gateways/alchemy/test/: alchemy_test.py  envvars.py
gateways/alchemy_gateway/: pyproject.toml
gateways/alchemy_gateway/src/sbilifeco/gateways/: sqlalchemy_gateway.py
gateways/alchemy_gateway/test/: sqlalchemy_gateway_test.py
gateways/file-read-update-gateway/: pyproject.toml
gateways/file-read-update-gateway/src/sbilifeco/gateways/: file_read_update.py
gateways/file-read-update-gateway/test/: gateway_test.py
gateways/fs_metadata_storage/: pyproject.toml
gateways/fs_metadata_storage/src/sbilifeco/gateways/: fs_metadata_storage.py
gateways/fs_metadata_storage/test/: fs_metadata_storage_test.py
gateways/gemini/: pyproject.toml
gateways/gemini/src/sbilifeco/gateways/: gemini.py
gateways/gemini/test/: gemini_test.py
gateways/kafka-as-repo/: pyproject.toml
gateways/kafka-as-repo/src/sbilifeco/gateways/: kafka_as_repo.py
gateways/kafka-as-repo/test/: envvars.py  repo_test.py
gateways/ollama/: pyproject.toml
gateways/ollama/src/sbilifeco/gateways/: ollama.py
gateways/ollama/test/: ollama_test.py
gateways/redis/: pyproject.toml
gateways/redis/src/sbilifeco/gateways/: redis.py
gateways/redis/test/: envvars.py  redis_test.py
gateways/synmetrix_metadata_storage/: pyproject.toml
gateways/synmetrix_metadata_storage/src/sbilifeco/gateways/: synmetrix.py
gateways/synmetrix_metadata_storage/test/: synmetrix_test.py
gateways/vertex/: pyproject.toml
gateways/vertex/src/sbilifeco/gateways/: vertex.py  vertex_gemini.py
gateways/vertex/test/: envvars.py  vertex_test.py
resources/: postamble.txt  preamble.txt  prompt-with-sql-only.txt  prompt.txt
sbin/db-migration-dematerialised/: alembic.ini
sbin/db-migration-materialised/: alembic.ini
sbin/query-flow-batch-test/: Dockerfile  batch_test.py  envvars.py
sbin/sql-generator-test/: generate_conversation.py  generate_test.py
sbin/sync-libraries/: find_out_of_sync_libs.py
sbin/sync-pip/: find_out_of_sync_pip.py
sbin/sync-pyprojects/: find_outdated_pyprojects.py
(+181 files in other folders)
