[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-alchemy"
version = "0.1.1"
description = "SQL Alchemy based gateway implementation"
dependencies = [
    "sqlalchemy>=2.0.43",
    "sbilifeco-boundary-sql-db>=0.1.0",
    "sbilifeco-models-base>=0.1.3",
]
