[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-sqlalchemy"
version = "0.1.1"
description = "Using SQLAlchemy for database-based operations including storage of metadata"
dependencies = [
    "sqlalchemy>=2.0.43",
    "sbilifeco-models-base>=0.1.4",
    "sbilifeco-models-db-metadata>=0.1.7",
    "sbilifeco-boundary-metadata-storage>=0.1.6",
]