[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-file-read-update"
version = "0.1.0"
description = "Gateway to read and update file contents, assuming they already exist and cannot be deleted."
dependencies = []