[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateways-fs-metadata-storage"
version = "0.1.5"
description = "Metadata storage using file system"
dependencies = [
    "uuid>=1.30",
    "sbilifeco-models-base>=0.1.2",
    "sbilifeco-models-db-metadata>=0.1.5",
    "sbilifeco-boundary-metadata-storage>=0.1.5"
]
