[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-gemini"
version = "0.1.6"
description = "LLM using Gemini"
dependencies = [
    "google-genai>=1.18.0",
    "sbilifeco-models-base>=0.1.1",
    "sbilifeco-models-db-metadata>=0.1.4",
    "sbilifeco-boundaries-llm>=0.1.2"
]
