[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-kafka-as-repo"
version = "0.1.0"
description = "description"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-boundary-query-flow>=0.2.0",
    "sbilifeco-paths-query-flow>=0.1.6",
    "sbilifeco-cp-kafka>=0.2.2"
]