[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-kafka-as-repo"
version = "0.1.4"
description = "Using Kafka messages as a repository of records"
dependencies = [
    "sbilifeco-models-base>=0.1.4",
    "sbilifeco-boundary-query-flow>=0.4.0",
    "sbilifeco-paths-query-flow>=0.2.0",
    "sbilifeco-cp-kafka>=0.2.3"
]