[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateways-ollama"
version = "0.1.3"
description = "LLM using Ollama"
dependencies = [
    "ollama>=0.4.9",
    "sbilifeco-models-base>=0.1.1",
    "sbilifeco-models-db-metadata>=0.1.4",
    "sbilifeco-boundaries-llm>=0.1.5",
]
