[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-ollama"
version = "0.1.4"
description = "LLM using Ollama"
dependencies = [
    "ollama>=0.4.9",
    "sbilifeco-models-base>=0.1.2",
    "sbilifeco-models-db-metadata>=0.1.5",
    "sbilifeco-boundaries-llm>=0.1.6",
]
