[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-cp-http-client"
version = "0.1.0"
description = "HTTP client used within microservices to access other HTTP-based microservices"
dependencies = [
    "requests>=2.32.3",
    "sbilifeco-models-base>=0.1.0"
]
