[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-cp-mcp-client"
version = "0.1.2"
description = "Base MCP client that should be subclassed for specific MCP applications"
dependencies = [
    "fastmcp>=2.12.3",
    "mcp>=1.14.1",
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-boundary-tool-support>=0.1.1"
]