[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-server-llm"
version = "0.1.6"
description = "HTTP service on top of LLM gateway"
dependencies = [
    "sbilifeco-models-base>=0.1.2",
    "sbilifeco-models-db-metadata>=0.1.4",
    "sbilifeco-boundaries-llm>=0.1.5",
    "sbilifeco-paths-llm>=0.1.3",
    "sbilifeco-cp-http-server>=0.1.1",
]
