[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-server-metadata-storage"
version = "0.1.5"
description = "HTTP service on top of metadata storage"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-models-db-metadata>=0.1.5",
    "sbilifeco-boundary-metadata-storage>=0.1.5",
    "sbilifeco-paths-metadata-storage>=0.1.5",
    "sbilifeco-cp-http-server>=0.1.1",
]
