[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-server-population-counter"
version = "0.1.0"
description = "HTTP server over population counter functionality"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-boundary-population-counter>=0.1.0",
    "sbilifeco-paths-population-counter>=0.1.0",
    "sbilifeco-cp-http-server>=0.1.1",
]