[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-server-query-flow"
version = "0.1.22"
description = "HTTP service on top of query flow"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-paths-query-flow>=0.1.4",
    "sbilifeco-cp-http-server>=0.1.1",
    "sbilifeco-user-flow-generate-query>=0.1.32",
]
