[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-server-session-data-manager"
version = "0.1.2"
description = "HTTP service on top of session data manager gateway"
dependencies = [
    "sbilifeco-boundary-session-data-manager>=0.1.1",
    "sbilifeco-models-base>=0.1.2",
    "sbilifeco-paths-session-data-manager>=0.1.0",
    "sbilifeco-cp-http-server>=0.1.1"
]