[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-cp-http-client-llm"
version = "0.1.2"
description = "HTTP client to talk to LLM microservice"
dependencies = [
    "requests>=2.32.3",
    "sbilifeco-cp-http-client>=0.1.1",
    "sbilifeco-boundaries-llm>=0.1.2",
    "sbilifeco-models-base>=0.1.1",
    "sbilifeco-cp-paths-llm>=0.1.1",
    "sbilifeco-models-db-metadata>=0.1.3",
]
