[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-cp-http-client-metadata-storage"
version = "0.1.2"
description = "HTTP client to access metadata storage microservice"
dependencies = [
    "requests>=2.32.3",
    "sbilifeco-models-base>=0.1.1",
    "sbilifeco-models-db-metadata>=0.1.2",
    "sbilifeco-boundaries-metadata-storage>=0.1.2",
    "sbilifeco-cp-http-client>=0.1.1",
    "sbilifeco-cp-paths-metadata-storage>=0.1.2",
]
