[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-client-metadata-storage"
version = "0.1.6"
description = "HTTP client to access metadata storage microservice"
dependencies = [
    "requests>=2.32.4",
    "sbilifeco-models-base>=0.1.4",
    "sbilifeco-models-db-metadata>=0.1.7",
    "sbilifeco-boundary-metadata-storage>=0.1.6",
    "sbilifeco-cp-http-client>=0.1.3",
    "sbilifeco-paths-metadata-storage>=0.1.5",
]
