[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-client-object-read-update"
version = "0.1.0"
description = "HTTP client for microservice to read and update updatable objects"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-cp-http-client>=0.1.2",
    "sbilifeco-boundary-object-read-update>=0.1.0",
    "sbilifeco-paths-object-read-update>=0.1.0",
]