[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-http-client-query-flow-answer-repo"
version = "0.2.1"
description = "HTTP client to access query flow answer repository"
dependencies = [
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-cp-http-client>=0.1.2",
    "sbilifeco-boundary-query-flow>=0.3.1",
    "sbilifeco-paths-query-flow-answer-repo>=0.1.0",
]